<resources>
    <string name="app_name">TicTacToe</string>

    <string name="homeTile">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Names</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="submitButton">Submit</string>
    <string name="NameHint">Enter Your Name</string>

    <string name="PlayAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>